Fix: Mini word-list overflow

--- a/style.css
+++ b/style.css
@@ -456,6 +456,7 @@ body {
 #word-content{
     gap: 4px;
     flex-direction: row;
+    overflow: hidden;
 }
 
 .blinking-cursor {
